--- a/src/Assets/css/Question.css
+++ b/src/Assets/css/Question.css
@@ -98,12 +98,23 @@
 
 }
 
+/* Python Page  */
+.python_content{
+    display: flex;
+    padding: 2rem;
+}
+
 .top_header{
     display: flex;
     flex-direction: column;
     align-items: center;
     flex-wrap: wrap;
     padding: 3rem;
+    padding-top: 0;
+}
+
+.instructions_content{
+    width: 40vh;
 }
 
 .main_page{
@@ -136,6 +147,7 @@
     flex-wrap: wrap;
     align-content: center;
     justify-content: center;
+    padding-top: 0;
 }
 
 .language_name h3{
@@ -166,6 +178,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-top: 2rem;
+    
+
 }
 .question_number{
     display: flex;
@@ -188,6 +203,11 @@
 }
 .question_title{
     color: black !important;
+    
+}
+
+.question_title h3{
+    font-size: 1.6rem;
 }
 .opt{
     display: flex;
@@ -262,14 +282,13 @@
 .answers_option ul li{
     display: flex;
     align-items: center;
-    height: 70px;
-    padding-left: 15px;
     border: 1px solid #eee;
     border-radius: 8px;
     margin-bottom: 20px;
-    font-size: 20px;
+    font-size: 17px;
     cursor: pointer;
     width: 27vh;
+    padding: 1rem;
     transition: 0.2s;
 
 }
@@ -285,3 +304,5 @@
 .answers_option .wrong{
     border-color: red;
 }
+
+
