--- a/src/Assets/css/credentials.css
+++ b/src/Assets/css/credentials.css
@@ -1,9 +1,10 @@
 .Credintal_context{
-    display: flex
+    display: flex;
+    justify-content: center;
 }
 .login_container,.Registration_container{
     position: relative;
-    width: 100%;
+    width: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
