--- a/src/Assets/css/Admin.css
+++ b/src/Assets/css/Admin.css
@@ -32,6 +32,12 @@
     color: white;
 }
 
+.side_nav .tabs a{
+    text-decoration: none;
+    color: white;
+    font-family: sans-serif;
+}
+
 .tab_common{
     display: flex;
     margin-bottom: 10px;
@@ -68,6 +74,7 @@
     display: flex;
     justify-content: flex-end;
     padding-right: 2rem;
+    margin-bottom: 20px;
 }
 
 .main_content .avatar_profile_img{
